# orcamento-facil

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  log.ini  mypy.ini  of.db  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 3f195dae23de_initial_migration.py  6334730e3fa7_income_id_added_to_transaction.py
src/: main.py  presenter.py
src/db/: models.py
src/ezbudget/: currencies.toml  main.py  presenter.py
src/ezbudget/model/: __init__.py  base_models.py  categories_data.toml  model.py  model_account.py  model_category.py  model_currency.py  model_income.py  model_subcategory.py  model_transaction.py  model_user.py  model_user_subcategory.py
src/ezbudget/modules/: frame_accounts_summary.py  frame_monthly_categories.py  frame_starting_page.py  frame_transactions.py
src/ezbudget/modules/db/: db_crud_account.py  db_crud_category.py  db_crud_income.py  db_crud_subcategory.py  db_crud_transaction.py  db_crud_user.py  db_models.py
src/ezbudget/modules/popups/: add_account.py  add_income.py
src/ezbudget/presenter/: __init__.py  presenter.py
src/ezbudget/utils/: hash.py  logging.py
src/ezbudget/view/: __init__.py  add_account_popup_view.py  add_income_popup_view.py  header.py  header_view.py  homepage.py  homepage_view.py  incoming_outgoing_view.py  incoming_outgoing_widget_view.py  login.py  login_view.py  main_window.py  main_window_view.py  manage_categories_widget_view.py  monthly_budget.py  register_login_popup_view.py  root_view.py  settings.py  starting_view.py  summary_view.py  tab_accounts.py  tab_categories.py  tab_home.py  tab_income_sources.py  tab_manage_accounts.py  tab_manage_categories.py  tab_manage_transactions.py  tab_monthly_budget.py  tab_transactions.py  tab_user_categories.py  top_view_add_account.py  top_view_add_credit.py  top_view_add_income.py  top_view_create_account.py  top_view_create_credit.py  top_view_create_income.py  top_view_create_transaction.py  transactions_widget_view.py  view_categories.py  view_header.py  (+6 more)
src/ezbudget/view/models/: __init__.py  item_models.py  view_models.py
src/ezbudget/view/styles/: __init__.py  fonts.py  widgets.py
src/model/: base_models.py  model.py
src/modules/: db_crud.py  db_models.py  frame_accounts_summary.py  frame_categorias_mensais.py  frame_monthly_budget.py  frame_monthly_categories.py  frame_movimentos.py  frame_orcamento_mensal.py  frame_pagina_inicial.py  frame_starting_page.py  frame_sumario_contas.py
src/modules/db/: db_crud_account.py  db_crud_category.py  db_crud_income.py  db_crud_subcategory.py  db_crud_transaction.py  db_crud_user.py  db_database.py  db_models.py  dc_crud_income.py
src/modules/popups/: add_credit_card.py  add_income.py
src/modules/popups/utils/: popup_setup.py
src/tests/: conftest.py  test_account.py  test_category.py  test_income.py  test_subcategory.py  test_transaction.py  test_user.py
src/utils/: __init__.py  hash.py
src/view/: __init__.py  add_account_popup_view.py  register_login_popup_view.py  root_view.py  starting_view.py
tests/: conftest.py  test_account.py  test_category.py  test_income.py  test_subcategory.py  test_transaction.py  test_user.py  test_user_subcategories.py
