[tool.poetry]
name = "orcamento-facil"
version = "0.1.0"
description = "Programa de orçamentação pessoal."
authors = ["DuoDinamico"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"
sqlalchemy = "^2.0.22"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.12.0"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v"

[tool.isort]
line_length = 100
profile = "black"
src_paths = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
