[tool.poetry]
name = "orcamento-facil"
version = "0.1.0"
description = "Programa de orçamentação pessoal."
authors = ["DuoDinamico"]
license = "GNU"
readme = "README.md"
packages = [ { include = "ezbudget", from = "src" } ]
include = [{ path = "tests", format = "sdist" }]

# if needed to run pyling: poetry run pylint --rcfile=.pylintrc **/*.py

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"
sqlalchemy = "^2.0.22"
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.12.0"
pylint = "^3.0.2"
pre-commit = "^3.5.0"

[tool.black]
line-length = 132
target-version = ['py311']
include = '(src\/scripts\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "-v"

[tool.isort]
profile = "black"
line_length = 132
src_paths = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
